--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config=config/webpack.dev.js",
-    "start": "webpack-dev-server --config=config/webpack.dev.js",
+    "build": "webpack --config=webpack.dev.js",
+    "start": "webpack-dev-server --config=webpack.dev.js",
+    "dev": "nodemon --watch webpack.dev.js --watch src/server src/server/devServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "extract-loader": "^3.0.0",
     "file-loader": "^2.0.0",
@@ -21,6 +28,9 @@
     "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dashboard": "^2.0.0",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-dev-server": "^3.1.8",
+    "webpack-hot-middleware": "^2.24.0"
   }
 }
