--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "express": "^4.16.3",
     "extract-loader": "^3.0.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
@@ -27,6 +28,7 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.4",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0"
