--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config=webpack.dev.js",
+    "build": "NODE_ENV=production webpack --config=webpack.prod.js",
     "dev": "nodemon --inspect --watch webpack.dev.js --watch src/main.js src/server/devServer.js",
+    "prod": "NODE_ENV=production node src/server/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,7 +19,10 @@
     "extract-loader": "^3.0.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
+    "mini-css-extract-plugin": "^0.4.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   },
@@ -30,6 +34,7 @@
     "@babel/register": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.4",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0"
   }
