--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-loader": "^0.5.5",
     "mini-css-extract-plugin": "^0.4.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss": "^7.0.2",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.19.1",
@@ -34,8 +35,10 @@
     "@babel/register": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.4",
+    "postcss-loader": "^3.0.0",
+    "precss": "^3.1.2",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-dev-middleware": "^3.3.0",
-    "webpack-hot-middleware": "^2.24.0"
+    "webpack-hot-middleware": "^2.24.1"
   }
 }
