more npm scripts setup todo

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tjalferes-com",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server/main.js",
   "scripts": {
-    "build": "NODE_ENV=production rimraf dist && webpack --config=webpack.prod.js --progress --profile --color",
+    "build": "SET NODE_ENV=production && webpack --config=webpack.prod.js --progress --profile --color",
     "dev": "nodemon --inspect --watch webpack.dev.js --watch src/main.js src/server/devServer.js",
     "prod": "NODE_ENV=production node src/server/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
