--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "mini-css-extract-plugin": "^0.4.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^7.0.2",
+    "require-dir": "^1.0.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
@@ -35,10 +36,12 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
+    "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.4",
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
+    "url-loader": "^1.1.1",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.2"
