--- a/package.json
+++ b/package.json
@@ -13,22 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^9.7.4",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^1.0.1",
-    "express": "^4.17.1",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
-    "mini-css-extract-plugin": "^0.4.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss": "^7.0.27",
     "require-dir": "^1.2.0",
-    "rimraf": "^2.7.1",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "vue": "^3.0.0-alpha.7",
+    "vue-router": "^4.0.0-alpha.1",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -36,14 +24,25 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.6",
     "@babel/register": "^7.8.6",
-    "clean-webpack-plugin": "^0.1.19",
+    "autoprefixer": "^9.7.4",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
+    "extract-loader": "^4.0.3",
+    "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.19.4",
+    "mini-css-extract-plugin": "^0.4.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^7.0.27",
     "postcss-loader": "^3.0.0",
-    "precss": "^3.1.2",
-    "url-loader": "^1.1.2",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "precss": "^4.0.0",
+    "rimraf": "^2.7.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^3.0.0",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
