--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "direct-vuex": "^0.10.4",
     "require-dir": "^1.2.0",
+    "typescript": "^3.8.3",
     "vue": "^3.0.0-alpha.7",
     "vue-router": "^4.0.0-alpha.1",
     "vuex": "^3.1.2"
