--- a/package.json
+++ b/package.json
@@ -16,35 +16,35 @@
     "direct-vuex": "^0.10.4",
     "require-dir": "^1.2.0",
     "typescript": "^3.8.3",
-    "vue": "^3.0.0-alpha.7",
-    "vue-router": "^4.0.0-alpha.1",
-    "vuex": "^3.1.2"
+    "vue": "^3.0.0-alpha.11",
+    "vue-router": "^4.0.0-alpha.4",
+    "vuex": "^4.0.0-alpha.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.6",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.6",
-    "@babel/register": "^7.8.6",
-    "autoprefixer": "^9.7.4",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/register": "^7.9.0",
+    "autoprefixer": "^9.7.5",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
-    "extract-loader": "^4.0.3",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.5",
+    "extract-loader": "^5.0.1",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.0.4",
+    "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss": "^7.0.27",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
-    "rimraf": "^2.7.1",
+    "rimraf": "^3.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^3.0.0",
-    "vue-loader": "^15.9.0",
+    "url-loader": "^4.0.0",
+    "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.42.0",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
 }
