--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "direct-vuex": "^0.10.4",
     "require-dir": "^1.2.0",
     "typescript": "^3.8.3",
-    "vue": "^3.0.0-alpha.11",
-    "vue-router": "^4.0.0-alpha.4",
+    "vue": "^3.0.0-beta.1",
+    "vue-router": "^4.0.0-alpha.5",
     "vuex": "^4.0.0-alpha.1"
   },
   "devDependencies": {
