--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "direct-vuex": "^0.10.4",
+    "direct-vuex": "^0.11.0",
     "require-dir": "^1.2.0",
     "typescript": "^3.8.3",
-    "vue": "^3.0.0-beta.1",
-    "vue-router": "^4.0.0-alpha.5",
-    "vuex": "^4.0.0-alpha.1"
+    "vue": "^3.0.0-beta.10",
+    "vue-router": "^4.0.0-alpha.10",
+    "vuex": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
