--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "direct-vuex": "^0.11.0",
+    "direct-vuex": "^0.12.0",
     "require-dir": "^1.2.0",
-    "typescript": "^3.9.5",
-    "vue": "^3.0.0-beta.14",
-    "vue-router": "^4.0.0-alpha.12",
-    "vuex": "^4.0.0-beta.2"
+    "typescript": "^3.9.7",
+    "vue": "^3.0.0-rc.5",
+    "vue-router": "^4.0.0-beta.4",
+    "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/register": "^7.10.1",
-    "autoprefixer": "^9.8.0",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/register": "^7.10.5",
+    "autoprefixer": "^9.8.5",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.5.3",
+    "css-loader": "^4.0.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
@@ -42,9 +42,9 @@
     "rimraf": "^3.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
-    "vue-loader": "^15.9.2",
+    "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
   }
 }
